Refactor service annotations and remove unused qualifiers
Replaced `@Qualifier` annotations with direct autowiring for simplicity and removed redundant service name constants. Updated logging and error handling in several services and tests for better readability and reliability. Clean up unused imports and comments across files.

Signed-off-by: doychin <doychin@dsoft-bg.com>